use ai_query for batch inference

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ langchain
 langchain-community
 langchain_text_splitters
 transformers
-mosaicml_cli
+gql
+poppler-utils
 unstructured[pdf,docx]
 requests-toolbelt
-mosaicml-streaming
 mlflow[genai,databricks]
